# wattson

./: .gitignore  CLAUDE.md  LICENSE  PRIVACY.md  README.md  WATTSON.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/: SYNC.md
scripts/: analyze-class-types.ts  inspect_ride_details.py
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.dev.json  tauri.conf.json  tauri.conf.test.json  tauri.dev2.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddFilterButton.tsx  ApiSync.tsx  ChartBuilder.tsx  ChartCard.tsx  ChartExportButton.tsx  ChartFilterBar.tsx  ChartList.tsx  ChartPlot.tsx  ChartViewer.tsx  CompareTab.tsx  CsvImport.tsx  CumulativeTotals.tsx  DashboardEmptyState.tsx  DashboardGrid.tsx  DashboardTab.tsx  EfficiencyFactor.tsx  ErrorBoundary.tsx  ExportButton.tsx  Favorites.tsx  FilterChip.tsx  FilterEditors.tsx  InsightsNewTab.tsx  InsightsTab.tsx  MostRepeated.tsx  OutputChart.tsx  PersonalRecords.tsx  ReauthModal.tsx  RideDetailChart.tsx  SetupWizard.tsx  ShareMenu.tsx  SortChip.tsx  StudioTab.tsx  WorkoutCard.tsx  WorkoutDetail.tsx  WorkoutHeatmap.tsx  WorkoutList.tsx  WorkoutToolbar.tsx
src/lib/: api.test.ts  api.ts  chartTemplates.ts  charts.ts  classType.test.ts  classType.ts  csv.ts  dashboardDefaults.ts  database.test.ts  database.ts  fields.ts  (+8 more)
test-server/: find-window-id.swift  fixtures.js  package-lock.json  package.json  server.js  wdio.conf.js  wdio.screenshots.conf.js
(+37 files in other folders)
