[package]
name = "wattson"
version = "0.2.0"
description = "Peloton Ride Analyzer"
authors = ["you"]
edition = "2021"

[lib]
name = "wattson_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native"] }
